--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-    "name": "trillo",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "watch:sass": "node-sass sass/main.scss css/style.css -w",
-        "serve": "serve",
-        "start": "run-p serve watch:sass",
-        "compile:sass": "node-sass sass/main.scss css/style.comp.css",
-        "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\"  -o css/style.concat.prefixed.css css/style.comp.css",
-        "compress:css": "node-sass css/style.concat.prefixed.css css/style.css --output-style compressed",
-        "build": "run-s compile:sass prefix:css compress:css"
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "autoprefixer": "^10.4.2",
-        "concat": "^1.0.3",
-        "node-sass": "^7.0.1",
-        "npm-run-all": "^4.1.5",
-        "postcss-cli": "^9.1.0",
-        "serve": "^13.0.2"
-    }
+  "name": "trillo",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "watch:sass": "sass sass/main.scss css/style.css -w",
+    "serve": "serve",
+    "start": "run-p serve watch:sass",
+    "compile:sass": "sass sass/main.scss css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\"  -o css/style.concat.prefixed.css css/style.comp.css",
+    "compress:css": "sass css/style.concat.prefixed.css css/style.css --style=compressed",
+    "build": "run-s compile:sass prefix:css compress:css"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "concat": "^1.0.3",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^9.1.0",
+    "sass": "^1.58.0",
+    "serve": "^14.2.0"
+  }
 }
